force-app/main/default/objects/App_User__c/App_User__c.object-meta.xml
<CustomObject>
    <description>Represents a mobile app user profile linked to a patient and used for mobile notifications and document sharing.</description>
    <label>App User</label>
    <nameField>
        <label>App User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>App Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>