force-app/main/default/objects/App_User__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Stores the city associated with the app user’s address.</description>
    <inlineHelpText>Enter the city for the app user’s address.</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>