force-app/main/default/objects/App_User__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <description>Stores the app user’s date of birth.</description>
    <inlineHelpText>Enter the app user’s date of birth.</inlineHelpText>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>