force-app/main/default/objects/App_User__c/fields/Device_Token__c.field-meta.xml
<CustomField>
    <fullName>Device_Token__c</fullName>
    <description>Stores the device token used to send push notifications to the app user.</description>
    <inlineHelpText>Enter the mobile device token used for push notifications.</inlineHelpText>
    <label>Device Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>