force-app/main/default/objects/App_User__c/fields/dob__c.field-meta.xml
<CustomField>
    <fullName>dob__c</fullName>
    <description>Stores the app user's date of birth.</description>
    <inlineHelpText>Enter the app user's date of birth.</inlineHelpText>
    <label>dob</label>
    <type>Date</type>
</CustomField>