force-app/main/default/objects/App_User__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Stores the email address used to identify and contact the app user.</description>
    <inlineHelpText>Enter the app user's primary email address.</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>