force-app/main/default/objects/App_User__c/fields/Failed_OTP_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Failed_OTP_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Counts consecutive incorrect OTP verification attempts. Reset to 0 on successful verification or once the account is locked via OTP_Locked_Until__c.</description>
    <inlineHelpText>Number of consecutive wrong OTP attempts since the last successful verification.</inlineHelpText>
    <label>Failed OTP Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>