force-app/main/default/objects/App_User__c/fields/Matching_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Matching_Percentage__c</fullName>
    <description>Stores the best matching score (0-100) calculated by PatientAppMatchingBatch when comparing the App User to existing patient Contact records.</description>
    <inlineHelpText>Enter the match percentage calculated for this app user record.</inlineHelpText>
    <label>Matching Percentage</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>