force-app/main/default/objects/App_User__c/fields/OTP__c.field-meta.xml
<CustomField>
    <fullName>OTP__c</fullName>
    <description>Stores the one-time password used for app user verification.</description>
    <inlineHelpText>Enter the current one-time password for verification.</inlineHelpText>
    <label>OTP</label>
    <length>6</length>
    <type>Text</type>
</CustomField>