force-app/main/default/objects/App_User__c/fields/OTP_Expiration__c.field-meta.xml
<CustomField>
    <fullName>OTP_Expiration__c</fullName>
    <description>Stores the expiration time for the one-time password.</description>
    <inlineHelpText>Enter the time when the OTP expires.</inlineHelpText>
    <label>OTP Expiration</label>
    <type>DateTime</type>
</CustomField>