force-app/main/default/objects/App_User__c/fields/OTP_Locked_Until__c.field-meta.xml
<CustomField>
    <fullName>OTP_Locked_Until__c</fullName>
    <description>When set to a future datetime, OTP verification (and new OTP requests) are blocked until this time. Set after 3 consecutive incorrect OTP attempts; cleared on successful verification.</description>
    <inlineHelpText>Account is locked out of OTP verification until this date/time.</inlineHelpText>
    <label>OTP Locked Until</label>
    <type>DateTime</type>
</CustomField>