force-app/main/default/objects/App_User__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the app user record to the related patient or contact record.</description>
    <inlineHelpText>Select the patient or contact associated with this app user.</inlineHelpText>
    <label>Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>App Users</relationshipLabel>
    <relationshipName>App_Users</relationshipName>
    <type>Lookup</type>
</CustomField>