force-app/main/default/objects/App_User__c/fields/Session_Token__c.field-meta.xml
<CustomField>
    <fullName>Session_Token__c</fullName>
    <description>Stores the session token used to authenticate the app user session.</description>
    <inlineHelpText>Enter the session token associated with the app user session.</inlineHelpText>
    <label>Session Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>