force-app/main/default/objects/App_User__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Stores the state associated with the app user’s address.</description>
    <inlineHelpText>Enter the state for the app user’s address.</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>