force-app/main/default/objects/App_User__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Stores the street address for the app user.</description>
    <inlineHelpText>Enter the street address for the app user.</inlineHelpText>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>