force-app/main/default/objects/App_User__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>Stores the ZIP or postal code for the app user’s address.</description>
    <inlineHelpText>Enter the ZIP or postal code for the app user’s address.</inlineHelpText>
    <label>Zip Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>